--- a/2/index.css
+++ b/2/index.css
@@ -7,6 +7,9 @@ body {
     max-width:100vw;
     overflow-x:hidden;
     scroll-behavior: smooth;
+    background:black;
+    color:white;
+
 }
 #loading {
     width: 100vw;
@@ -34,13 +37,14 @@ body {
 }
 header {
     width:92vw;
-    padding:6vh 4vw;
+    padding:4vh 4vw;
     position:fixed;
     font-weight:bold;
     background:transparent;
-    color:#fff;
+    color:white;
     transition:0.4s ease-in-out;
     z-index:2;
+
 }
 header table {
     width:100%;
@@ -100,26 +104,29 @@ header table {
 }
 #top_part {
     width:100%;
-    border:2vh solid #fff;
 }
 #top_part tr td{
     width:50%;
 }
 #about {
-    width:84% !important;
-    height:95vh;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    text-align:left;
-    padding:0px 8%;
+    margin-top: 58px;
+    animation-delay: 2s;
+    text-align: center;
+    align-items: center;
+    width: 73vw !important;
+    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    padding: 0px 12%;
 }
 #about h1 {
     font-size:45px;
     word-wrap:break-word;
+    text-align: center;
 }
 #about table {
-    width:70%;
     margin-top:4vh;
 }
 #about table tr td {
@@ -176,7 +183,7 @@ header table {
 #work h1 {
     padding:5px 0px;
     border-bottom:4px solid rgb(255, 44, 90);
-    width:6%;
+    width: 11%;
 }
 #photos {
     width:100%;
@@ -342,7 +349,7 @@ button:focus {
     .btn_one {
     padding:6px 30px;
     width:60%;
-    margin:4vh auto;
+    margin: 3vh auto;
     box-shadow:0px 10px 20px rgba(255, 44, 90, 0.8);
     background:rgb(255, 44, 90);
     color:#fff;
@@ -375,7 +382,6 @@ button:focus {
     }
     header {
         width:96vw;
-        background:#fff;
         padding:4vh 2vw;
         position:absolute;
     }
@@ -386,6 +392,47 @@ button:focus {
         padding:15px 0px;
     }
     #navigation a {
-        color:#000;
+    color: white;
     }
+}
+
+.imagee{
+    width: 45vw;
+    height:auto;
+}
+#projectdiv{
+    width: 45vw;
+    margin: auto;
+    text-align: -webkit-center;
+margin-bottom: 70px;
+}
+.projects{
+    display:flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+}
+.buttondiv{
+    width:500px;
+    margin:auto;
+}
+
+@media (max-width: 1000px){
+.Projects{
+    width: fit-content;
+}
+#work{
+    padding:5%;
+
+}
+#projectdiv{
+    width: 95%;
+    margin: auto;
+    text-align: -webkit-center;
+    margin-bottom: 70px;
+}
+.imagee {
+    width: 100%;
+    height: auto;
+}
+
 }
